# marketing_ml_classification_regression_clustering

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
app/classification/: 01_classification_model.py
app/regression/: 02_regression_model.py
deploy/: 01_classification_model.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: RandomForestClassifier.pkl
models/regression/: RandomForestRegressor.pkl
notebooks/: 00_experiment_notebook.ipynb  01_load_and_clean_data.ipynb  02_data_cleaning.ipynb  03_feature_engineering.ipynb  04_explore_data.ipynb  05_classification_model_training.ipynb  05_classification_model_training_evaluation.ipynb  06_regression_model_training_evaluation.ipynb  3_feature_engineering.ipynb  4_explore_data.ipynb
