[project]
name = "marketing-ml"
version = "0.1.0"
description = "A machine learning initiative focused on leveraging classification, regression, and clustering models to gain insights and make predictions from marketing campaign data."
authors = [
    {name = "Enrique Aranda Varela"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.12.0",
    "streamlit>=1.32.0",
    "scikit-learn>=1.4.0",
    "ipykernel>=6.0.0",
    "imbalanced-learn>=0.10.0",
    "joblib>=1.3.0",
    "urllib3>=2.0.0",  # Añade esto explícitamente
    "requests>=2.31.0"  # Añade esto explícitamente
]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"