[tool.poetry]
name = "marketing-ml"
version = "0.1.0"
description = "Machine learning for marketing campaigns"
authors = ["Enrique Aranda Varela <tu@email.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.0.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scipy = "^1.12.0"
streamlit = "^1.32.0"
scikit-learn = "^1.4.0"
ipykernel = "^6.0.0"
imbalanced-learn = "^0.10.0"
joblib = "^1.3.0"
urllib3 = "^2.0.0"
requests = "^2.31.0"
xgboost = "^3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"